# decayPsi2S

./: .gitignore  CMakeLists.txt  README
include/: TDecayPolarized.h  TGenPsi2S.h  TGenUPCJpsiFlat.h
src/: TDecayPolarized.cxx  TGenPsi2S.cxx  TGenUPCJpsiFlat.cxx  boxgen.cxx  fdgen.cxx
